# cross-platform-calculator-project

./: .CMakeLists.txt.swp  .README.md.swp  .gitignore  CMakeLists.txt  Jenkinsfile  README.md
.github/workflows/: build-and-test.yml  build.yml
include/: .calculator.h.swp  calculator.h
src/: .calculator.cpp.swp  .main.cpp.swp  calculator.cpp  main.cpp
tests/: calculator_test.cpp
